fix back-button div overlapping scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -191,5 +191,4 @@ img {
 #root {
     width: 100%;
     height: 100%;
-    overflow: auto;
 }
